Revert "Revert "Hosted native cards - fix the font contrast""

--- a/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
+++ b/static/src/stylesheets/module/commercial/gustyle/_gu-comcontent.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.gu-display__hosted-bright .hostedbadge__info {
+    color: #ffffff;
+}
+
 .gu-display__image-layer {
     width: 100%;
     height: 100%;
